--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 redis = { version = "0.21", features = ["tokio-comp"] }
+teloxide = { version = "0.9", features = ["macros", "auto-send"] }
+dotenv = "0.15"
