--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tracing-subscriber = "0.3"
 redis = { version = "0.21", features = ["tokio-comp"] }
 teloxide = { version = "0.9", features = ["macros", "auto-send"] }
 dotenv = "0.15"
+time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
