--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ dotenv = "0.15"
 time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
 dashmap = "5.3"
 lazy_static = "1.4"
+ctrlc = "3.2"
