--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
 dashmap = "5.3"
 lazy_static = "1.4"
 ctrlc = "3.2"
+image = "0.24"
