--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,10 @@ time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
 dashmap = "5.3"
 lazy_static = "1.4"
 ctrlc = "3.2"
-image = "0.24"
-reqwest_cookie_store = "0.3"
-cookie_store = "0.16"
+reqwest_cookie_store = "0.4"
 fancy-regex = "0.10"
-rustyline = "9.1"
+rustyline = "10.0"
 futures = "0.3"
 html2text = "0.4"
 rand = "0.8"
+async-trait = "0.1"
